<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jogo de Tabuada</string>
    <string name="action_settings">Settings</string>
    <string name="msg1">Escolha Seu Desafio </string>
    <string name="btn1">Nível 1 </string>
    <string name="btn2">Nível 2 </string>
    <string name="btn3">Nível 3 </string>
    <string name="btn4">Nível 4 </string>
    <string name="btn5">Nível 5 </string>
    <string name="title_activity_escolha_base">Escolha da Base</string>
    <string name="msgBase">Escolha uma Base</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="title_activity_jogo">Qual a resposta?</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btnResponde">Ok</string>
    <string name="title_activity_jogo_numero_oculto">Ache o número oculto!</string>
    <string name="strPontos">Pontos:</string>
    <string name="strMsgBonus">10 acertos: Ganhou bônus de 100 pontos!</string>
    <string name="strMsgEmptyResponse">Você não deu uma resposta!</string>
</resources>
