<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgBase"
        android:id="@+id/txt"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textIsSelectable="false"
        android:gravity="center" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_1"
                android:id="@+id/btn_1"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="1"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_2"
                android:id="@+id/btn_2"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="2"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_3"
                android:id="@+id/btn_3"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="3"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:id="@+id/tableRow">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_4"
                android:id="@+id/btn_4"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="4"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_5"
                android:id="@+id/btn_5"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="5"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_6"
                android:id="@+id/btn_6"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="6"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:id="@+id/tableRow2">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_7"
                android:id="@+id/btn_7"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="7"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_8"
                android:id="@+id/btn_8"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="8"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btn_9"
                android:id="@+id/btn_9"
                android:textSize="35dp"
                android:onClick="jogar"
                android:tag="9"/>
        </TableRow>
    </TableLayout>

</LinearLayout>